--- a/css/bulma.css
+++ b/css/bulma.css
@@ -21,8 +21,8 @@
 }
 
 @font-face {
-  font-family: 'FontAwesome';
-  src: url('../fonts/a_Assuan Medium.ttf');
+  font-family: 'a_Assuan';
+  src: url('../fonts/a_Assuan.ttf');
   font-weight: normal;
   font-style: normal;
 }
