--- a/css/bulma.css
+++ b/css/bulma.css
@@ -25,12 +25,12 @@
     font-style: normal;
     font-weight: 400;
     src: local('a_Assuan'), local('a_Assuan-Medium'),
-        url(http://allfont.ru/cache/fonts/a_assuan_542a7e75d34754e3943c73f50d028207.woff) format('woff'),
-        url(http://allfont.ru/cache/fonts/a_assuan_542a7e75d34754e3943c73f50d028207.ttf) format('truetype');
+        url(../fonts/a_assuan_542a7e75d34754e3943c73f50d028207.woff) format('woff'),
+        url(../fonts/a_assuan_542a7e75d34754e3943c73f50d028207.ttf) format('truetype');
 }
 
 .logo {
-  font-family: "a_Assuan";
+  font-family: 'a_Assuan', arial;
   font-size: 2rem;
 }
 
