--- a/css/carousel.css
+++ b/css/carousel.css
@@ -234,8 +234,19 @@
   margin-top: -25px;
   padding: 40px 0 80px 0;
   bottom: 0;
-  background-color: rgba(0,0,0, .3);
+  background: -webkit-linear-gradient(180deg, rgba(0, 0, 0, 0), rgba(0, 0, 0, .6));
+  background: linear-gradient(180deg, rgba(0, 0, 0, 0), rgba(0, 0, 0, .6));
 }
+
+.carousel__slide h1 > a {
+  color: rgba(255,255, 255, .9);
+  line-height: 54px; 
+}
+
+.carousel__slide h1 > a:hover {
+  color: rgba(255,255, 255, 1); 
+}
+
 .carousel__slide h2,
 h3 {
   color: #fafafa;
@@ -297,9 +308,9 @@ h3 {
   }
 }
 
-@media screen and (max-width: 360px) {
+/*@media screen and (max-width: 360px) {
   .carousel__slide h1 {
     font-size: 1.4rem;
-    top: 40%;
+    padding: 20px 0 60px 0;
   }
-}
+}*/
