--- a/css/bulma.css
+++ b/css/bulma.css
@@ -6897,9 +6897,9 @@ label.panel-block:hover {
 }
 
 .columns {
-  margin-left: -0.75rem;
+  /*margin-left: -0.75rem;
   margin-right: -0.75rem;
-  /*margin-top: 0.75rem;*/
+  margin-top: 0.75rem;*/
 }
 
 /*.columns:last-child {
@@ -8154,6 +8154,15 @@ label.panel-block:hover {
 }
 
 @media screen and (max-width: 360px) {
+
+  .title.is-2 {
+    font-size: 1.5rem;
+  }
+
+  .adress {
+    width: calc(100vw - 30px);
+  }
+
   .shield {
     position: absolute;
     width: inherit;
