--- a/css/main.css
+++ b/css/main.css
@@ -128,7 +128,7 @@ hr {
 
 .banner {
   position: relative;
-  background-image: url("/img/header_banner.jpg");
+  background-image: url("../img/header_banner.jpg");
   background-position: center top;
   width: 100%;
   height: calc(100vh - 64px);
@@ -173,7 +173,7 @@ hr {
   padding: 20px; }
 
 .container-full {
-  background-image: url("/img/fon_director.jpg");
+  background-image: url("../img/fon_director.jpg");
   background-size: cover;
   background-position: center;
   width: 100%;
@@ -189,7 +189,7 @@ hr {
     padding: 0; }
 
 .image-bg {
-  background-image: url("/img/director.jpg");
+  background-image: url("../img/director.jpg");
   background-size: cover;
   background-position: center;
   width: 100%;
